<resources>
    <string name="app_name">My App Protfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="action_spotify_streamer_app">Spotify Streamer</string>
    <string name="action_scores_app">Scores App</string>
    <string name="action_library_app">Library App</string>
    <string name="action_build_it_bigger">Build it Bigger</string>
    <string name="action_xyz_reader">XYZ Reader</string>
    <string name="action_capstone_app">Capstone: My Own App</string>
</resources>
