<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_nanodegree_apps"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/blue_more_dark" />

    <Button
        android:id="@+id/btn_spotify_streamer"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/orange"
        android:text="@string/action_spotify_streamer_app"

        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btn_scores_app"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/orange"
        android:text="@string/action_scores_app"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btn_library_app"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/orange"
        android:text="@string/action_library_app"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btn_build_it_bigger"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/orange"
        android:text="@string/action_build_it_bigger"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btn_xyz_reader"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/orange"
        android:text="@string/action_xyz_reader"

        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btn_capstone"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/red"
        android:text="@string/action_capstone_app"
        android:textColor="@android:color/black" />
</LinearLayout>
